--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "node": "^16.17.0"
+    "node": "^16.17.0",
+    "npm": "^8.18.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
