--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "jimm.my personal website",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist/*",
+    "copy-assets": "ts-node tools/copyAssets",
+    "tsc": "tsc",
+    "build": "npm-run-all clean tsc copy-assets",
+    "dev:start": "npm-run-all build start",
+    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
+    "prod:start": "npm-run-all dev:start",
+    "prod": "npm-run-all dev",
+    "start": "node ./dist/index.js"
   },
   "repository": {
     "type": "git",
