--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-### Directories ###
+##### BEGIN Project-Specific Files to .gitignore #####
+.DS_Store
+/.svelte-kit
+/package
+#####   END Project-Specific Files to .gitignore #####
+
+
+
+##########################
+### ANY SUBDIRECTORIES ###
+##########################
 
 ## Intention: ignore packages, which should be re-installed on each deployment or dev build based on dependencies and versions listed in package.json and package-lock.json
 node_modules/
@@ -9,13 +19,21 @@ secrets/
 ## Intention: ignore logging, intentionally stored in log/
 log/
 
+## Intention: ignore build files, because they should be re-built anyway upon deployment for a specific environment
+build/
+
 ## Intention: ignore IDE-specific settings re: auto-deployment when build
 .vscode/
 
-### Files ###
+############################
+### FILE PATTERN OR TYPE ###
+############################
 
 ## Intention: ignore any .log files accidentally misplaced or thoughtlessly output in some lower directory, which may contain secrets
 *.log
 
 ## Intention: ignore any .env files, which contain environment-specific values such as database passwords or API keys.
+.env
 *.env
+*.env.*
+!.env.example
