as a final dependency to note in package.json, specifying engine node minimum version 16.17.0 partially for hygiene, but mostly because Microsoft Oryx seems to default to some really old version of Node (<14???) unless you specify a minimum engine version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "jimmy-sveltekit-test",
 	"version": "0.0.1",
 	"private": true,
+	"engine": {
+		"node": "^16.17.0"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
