--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint": "^8.16.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"svelte": "^3.44.0",
+		"svelte-adapter-azure-swa": "^0.10.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
