--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.0.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"node": "^16.17.0",
+		"npm": "^8.18.0"
+	}
 }
