--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint ."
 	},
-	"engine": {
+	"engines": {
 		"npm": ">=8.18.0",
 		"node": ">=16.17.0"
 	},
