--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.87",
 		"node": "^16.17.0",
 		"npm": "^8.18.0"
 	}
