--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.87",
-		"node": "^16.16.0",
-		"npm": "^8.11.0"
+		"@sveltejs/adapter-node": "^1.0.0-next.87"
 	}
 }
