--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+######################################################
+#################### .gitignore ######################
+######################################################
+
+
 ##### BEGIN Project-Specific Files to .gitignore #####
 .DS_Store
 /.svelte-kit
