--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jimmy",
   "version": "7.0.1",
   "private": true,
+  "main": "./build/index.js",
   "scripts": {
     "dev": "vite dev",
     "build": "npm-run-all build:prod",
@@ -12,7 +13,8 @@
     "preview:prod": "vite preview --mode production",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "node ./build/index.js"
   },
   "engines": {
     "npm": ">=8.11.0",
