clean state, added file watching to rebuild when running dev. however this project sucks and i am going to start a new one from scratch.

--- a/.eslintignore
+++ b/.eslintignore
@@ -49,6 +49,7 @@ log/
 
 ## Intention: ignore build files, because they should be re-built anyway upon deployment for a specific environment
 build/
+dist/
 
 ## Intention: ignore IDE-specific settings re: auto-deployment when build
 .vscode/
