--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "jimmy",
   "version": "7.0.1",
   "private": true,
-  "main": "./build/index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "dev": "vite dev",
+    "clean:dist": "rimraf ./build && rimraf ./.svelte-kit",
+    "dev:start": "vite dev",
+    "dev": "nodemon --watch src -e ts,svelte,html --exec npm run dev:start",
     "build": "npm-run-all build:prod",
     "build:dev": "vite build --mode development",
     "build:prod": "vite build --mode production",
@@ -16,7 +18,7 @@
     "lint": "eslint .",
     "browser": "",
     "prod:local": "npm-run-all build:prod preview:prod browser",
-    "start": "node ./build/index.js"
+    "start": "node ./dist/index.js"
   },
   "engines": {
     "npm": ">=8.11.0",
@@ -26,15 +28,22 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-node": "^1.0.0-next.87",
     "@sveltejs/kit": "next",
+    "@types/fs-extra": "^9.0.13",
+    "@types/shelljs": "^0.8.11",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "fs-extra": "^10.1.0",
+    "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.5",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
     "svelte-preprocess": "^4.10.6",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
     "vite": "^3.0.4"
