Update .gitignore to only ignore ./dist/ when it is in the root directory. Also removed build/ from .gitignore because I don't use that directory name anywhere for this project, so no point having weird stuff in my ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 
 
 ##### BEGIN Project-Specific Files to .gitignore #####
-.DS_Store
-/.svelte-kit
-/package
+
+
+
 #####   END Project-Specific Files to .gitignore #####
 
 
@@ -24,12 +24,14 @@ secrets/
 ## Intention: ignore logging, intentionally stored in log/
 log/
 
-## Intention: ignore build files, because they should be re-built anyway upon deployment for a specific environment
-build/
-dist/
-
 ## Intention: ignore IDE-specific settings re: auto-deployment when build
 .vscode/
+
+###########################
+### IGNORE IN ROOT ONLY ###
+###########################
+## Intention: ignore build files, because they should be re-built anyway upon deployment for a specific environment
+./dist/
 
 ############################
 ### FILE PATTERN OR TYPE ###
