--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node": ">=16.16.0"
   },
   "dependencies": {
+    "@types/ejs": "^3.1.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
