--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "node": ">=16.16.0"
   },
   "dependencies": {
-    "@types/ejs": "^3.1.1",
+    "body-parser": "^1.20.0",
+    "concurrently": "^7.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
@@ -39,6 +41,9 @@
     "npm": "^8.11.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/fs-extra": "^9.0.13",
