--- a/package.json
+++ b/package.json
@@ -30,19 +30,12 @@
     "node": ">=16.16.0"
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "concurrently": "^7.3.0",
-    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "node": "^16.16.0",
-    "npm": "^8.11.0"
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
