--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "node": "^16.16.0",
+    "npm": "^8.11.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.1",
