--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jimmy",
   "description": "Jimmy Luo personal website",
-  "version": "8.0.0",
+  "version": "8.1.2",
   "author": "Zhening Luo",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "scripts": {
-    "clean": "rimraf ./dist/*",
+    "clean": "rimraf --glob ./dist/*",
     "tsc": "tsc",
     "copy-assets": "ts-node tools/copyAssets",
     "prebuild": "npm run clean",
@@ -30,26 +30,26 @@
     "node": ">=16.16.0"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "node": "^16.16.0",
-    "npm": "^8.11.0"
+    "node": "^18.18.0",
+    "npm": "^10.2.0"
   },
   "devDependencies": {
-    "@types/ejs": "^3.1.1",
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.5",
-    "@types/fs-extra": "^9.0.13",
-    "@types/node": "^16.11.56",
-    "@types/shelljs": "^0.8.11",
-    "fs-extra": "^10.1.0",
-    "nodemon": "^2.0.19",
+    "@types/ejs": "^3.1.3",
+    "@types/express": "^4.17.19",
+    "@types/express-session": "^1.17.8",
+    "@types/fs-extra": "^11.0.2",
+    "@types/node": "^18.18.0",
+    "@types/shelljs": "^0.8.13",
+    "fs-extra": "^11.1.1",
+    "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
+    "rimraf": "^5.0.5",
     "shelljs": "^0.8.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^5.2.2"
   }
 }
