--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "clean": "rimraf --glob ./dist/*",
     "tsc": "tsc",
-    "copy-assets": "ts-node tools/copyAssets",
+    "copy-assets": "shx cp -r ./src/views ./dist",
     "prebuild": "npm run clean",
     "build": "npm run tsc",
     "postbuild": "npm run copy-assets",
@@ -43,13 +43,11 @@
     "@types/express-session": "^1.17.8",
     "@types/fs-extra": "^11.0.2",
     "@types/node": "^18.18.0",
-    "@types/shelljs": "^0.8.13",
     "fs-extra": "^11.1.1",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
-    "shelljs": "^0.8.5",
-    "ts-node": "^10.9.1",
+    "shx": "^0.3.4",
     "typescript": "^5.2.2"
   }
 }
