--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
   "name": "jimmy",
-  "description": "Jimmy Luo personal website",
   "version": "8.4.1",
-  "author": "Jimmy Zhening Luo",
-  "license": "MIT",
-  "main": "./dist/index.js",
+  "description": "Jimmy Luo personal website",
+  "main": "./dist/index.cjs",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jimmy-zhening-luo/jimmy.git"
   },
+  "author": "Jimmy Zhening Luo",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/jimmy-zhening-luo/jimmy/issues"
   },
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "scripts": {
-    "clean": "shx rm -rf dist",
-    "tsc": "tsc",
-    "copy-assets": "shx cp -r src/views dist",
-    "prebuild": "npm run clean",
-    "build": "npm run tsc",
+    "clean": "npm run clean:dist",
+    "clean:dist": "shx rm -rf dist",
+    "lint": "eslint --cache --cache-strategy content -c eslint.config.js **",
+    "lint:fix": "npm run lint -- --fix",
+    "prebuild": "npm run clean && npm run lint:fix",
+    "build": "tsc",
     "postbuild": "npm run copy-assets",
-    "start": "node dist/index.js",
+    "copy-assets": "shx cp -r src/views dist",
+    "start": "node .",
     "predev:start": "npm run build",
     "dev:start": "npm run start",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start"
   },
   "engines": {
-    "npm": ">=10.2.4",
-    "node": ">=18.18.2"
+    "npm": ">=10.2.5",
+    "node": ">=20.10.0"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
@@ -36,13 +39,18 @@
     "express-session": "^1.17.3"
   },
   "devDependencies": {
+    "@eslint/js": "^8.55.0",
+    "@jimbojet/lint": "^2.0.2",
+    "@stylistic/eslint-plugin": "^1.5.0",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
-    "@types/node": "^18.18.9",
-    "nodemon": "^3.0.1",
-    "npm-run-all": "^4.1.5",
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
+    "nodemon": "^3.0.2",
     "shx": "^0.3.4",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   }
 }
