--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "clean": "npm run clean:dist",
     "clean:dist": "shx rm -rf dist",
-    "lint": "eslint --cache --cache-strategy content -c eslint.config.js **",
+    "lint": "eslint --cache --cache-strategy content -c eslint.config.js src/**/*",
     "lint:fix": "npm run lint -- --fix",
     "prebuild": "npm run clean && npm run lint:fix",
     "build": "tsc",
