Replacing Express/EJS components and with Svelte demo. Tooled project for development. TBD: enable linting for .svelte files. TBD: enable build and deployment logic for Azure Static Web Apps.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,14 @@
 
 ##### BEGIN Project-Specific Files to .gitignore #####
 
-
+.DS_Store
+/build
+/.svelte-kit
+/package
+.vercel
+.output
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
 
 #####   END Project-Specific Files to .gitignore #####
 
