--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@jimbojet/lint": "^2.0.2",
     "@neoconfetti/svelte": "^1.0.0",
     "@stylistic/eslint-plugin": "^1.5.0",
-    "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.27.7",
     "@types/cookie": "^0.6.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
