--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
-    "@fontsource/fira-mono": "^5.0.12",
+    "@fontsource/open-sans": "^5.0.27",
+    "@fontsource/overpass-mono": "^5.0.17",
+    "@fontsource/oxygen": "^5.0.12",
     "@jimbojet/lint": "^2.2.3",
     "@stylistic/eslint-plugin": "^1.7.0",
     "@sveltejs/adapter-static": "^3.0.1",
