--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jimmy",
-  "version": "9.10.3",
+  "version": "9.10.4-beta.0",
   "description": "Jimmy Luo personal website",
   "type": "module",
   "repository": {
