--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jimmy",
-  "version": "9.10.4-beta.2",
+  "version": "9.10.4",
   "description": "Jimmy Luo personal website",
   "type": "module",
   "repository": {
