--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "scripts": {
-    "lint": "eslint --cache --cache-strategy content -c eslint.config.js svelte.config.js vite.config.ts src/**/*.ts",
+    "lint": "eslint --cache --cache-strategy content -c eslint.config.js svelte.config.js vite.config.ts src/**/*.ts src/**/*.svelte",
     "lint:fix": "npm run lint -- --fix",
-    "predev": "npm run lint:fix",
     "dev": "vite dev",
     "prebuild": "npm run lint:fix",
     "build": "vite build",
@@ -27,7 +26,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@jimbojet/lint": "^7.0.0",
+    "@jimbojet/lint": "8.0.0-beta.0",
     "@stylistic/eslint-plugin": "^1.8.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.5.7",
@@ -38,6 +37,7 @@
     "eslint-plugin-svelte": "^2.38.0",
     "svelte": "^4.2.15",
     "svelte-check": "^3.7.0",
+    "svelte-eslint-parser": "^0.35.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
