--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@jimbojet/lint": "^8.0.1",
-    "@stylistic/eslint-plugin": "^1.8.0",
+    "@jimbojet/lint": "~8.0.10",
+    "@stylistic/eslint-plugin": "~2.1.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.5.7",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-svelte": "^2.38.0",
-    "svelte": "^4.2.15",
+    "@typescript-eslint/eslint-plugin": "~7.8.0",
+    "@typescript-eslint/parser": "~7.8.0",
+    "eslint": "~8.57.0",
+    "eslint-plugin-svelte": "~2.39.0",
+    "svelte": "^4.2.16",
     "svelte-check": "^3.7.0",
-    "svelte-eslint-parser": "^0.35.0",
+    "svelte-eslint-parser": "^0.36.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
