--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
   },
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "scripts": {
-    "lint": "npm run lint:ts",
+    "lint": "eslint --cache --cache-strategy content -c eslint.config.js eslint.config.js svelte.config.js vite.config.ts src/**/*.svelte src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
-    "lint:ts": "eslint --cache --cache-strategy content -c eslint.config.js svelte.config.js vite.config.ts src/**/*.ts",
-    "lint:svelte": "eslint --cache --cache-strategy content -c eslint.config.js --parser-options project:tsconfig.json src/**/*.svelte",
     "prebuild": "npm run lint:fix",
     "build": "vite build",
     "postbuild": "npm run check",
