--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
   },
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "scripts": {
-    "lint": "eslint --cache --cache-strategy content src/**/*.svelte -c eslint.config.js --parser-options project:tsconfig.json eslint.config.js svelte.config.js vite.config.ts src/**/*.svelte src/**/*.ts",
+    "lint": "eslint --cache --cache-strategy content src/**/*.svelte -c eslint.config.js --parser-options project:tsconfig.json *.config.js *.config.ts src/**/*.svelte src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
-    "prebuild": "npm run lint:fix",
-    "build": "vite build",
-    "postbuild": "npm run check",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "npm run check -- --watch",
+    "prebuild": "npm run check && npm run lint:fix",
+    "build": "vite build",
     "prepreview": "npm run build",
     "preview": "vite preview",
     "dev": "vite dev"
