patch lint; modular lint scripts: +test script (calls preview)

--- a/package.json
+++ b/package.json
@@ -16,18 +16,25 @@
   },
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "scripts": {
-    "lint": "eslint --cache --cache-strategy content src/**/*.svelte -c eslint.config.js --parser-options project:tsconfig.json *.config.js *.config.ts src/**/*.svelte src/**/*.ts",
-    "lint:fix": "npm run lint -- --fix",
+    "es": "eslint --fix --cache --cache-strategy content -c eslint.config.js --parser-options project:tsconfig.json",
+    "lint": "npm run lint:config && npm run lint:src",
+    "lint:config": "npm run lint:config:js && npm run lint:config:ts",
+    "lint:src": "npm run lint:src:ts && npm run lint:src:svelte",
+    "lint:config:js": "npm run es -- *.config.js",
+    "lint:config:ts": "npm run es -- *.config.ts",
+    "lint:src:ts": "npm run es -- src/**/*.ts",
+    "lint:src:svelte": "npm run es -- src/**/*.svelte",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "npm run check -- --watch",
-    "prebuild": "npm run check && npm run lint:fix",
+    "prebuild": "npm run check && npm run lint",
     "build": "vite build",
     "prepreview": "npm run build",
     "preview": "vite preview",
+    "test": "npm run preview",
     "dev": "vite dev"
   },
   "devDependencies": {
-    "@jimbojet/lint": "~8.0.18",
+    "@jimbojet/lint": "~8.0.19",
     "@stylistic/eslint-plugin": "~2.1.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.5.10",
