--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jimmy",
-  "version": "9.13.29-dev.1",
+  "version": "9.13.29",
   "description": "jimm.my",
   "keywords": [],
   "type": "module",
