update lint, relint

--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "scripts": {
     "es": "eslint --fix --cache --cache-strategy content -c eslint.config.js",
-    "lint": "npm run lint:config && npm run lint:src",
-    "lint:config": "npm run lint:config:js && npm run lint:config:ts",
-    "lint:src": "npm run lint:src:ts && npm run lint:src:svelte",
+    "lint": "npm run lint:config && npm run lint:src && npm run lint:ci",
+    "lint:config": "npm run lint:config:json && npm run lint:config:js && npm run lint:config:ts",
+    "lint:config:json": "npm run es -- package.json tsconfig.json",
     "lint:config:js": "npm run es -- *.config.js",
-    "lint:config:ts": "npm run es -- *.config.ts",
+    "lint:config:ts": "",
+    "lint:src": "npm run lint:src:ts && npm run lint:src:svelte",
     "lint:src:ts": "npm run es -- src/**/*.ts",
     "lint:src:svelte": "npm run es -- src/**/*.svelte",
+    "lint:ci": "npm run lint:ci:yml",
+    "lint:ci:yml": "npm run es -- .github/workflows/*.yml",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "npm run check -- --watch",
     "prebuild": "npm run check && npm run lint",
@@ -35,7 +38,7 @@
     "dev": "vite dev"
   },
   "devDependencies": {
-    "@jimbojet/lint": "~10.1.4",
+    "@jimbojet/lint": "~10.4.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.5.10",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
