--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "src/**/*.svelte",
     "tests/**/*.js",
     "tests/**/*.ts",
-    "tests/**/*.svelte"
+    "tests/**/*.svelte",
   ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
@@ -48,6 +48,6 @@
     "allowUnusedLabels": false /* Disable error reporting for unused labels. */,
     "allowUnreachableCode": false /* Disable error reporting for unreachable code. */,
     /* Completeness */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+  },
 }
