--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "lint:config:json": "npm run es -- package.json tsconfig.json",
     "lint:config:js": "npm run es -- *.config.js",
     "lint:config:ts": "",
-    "lint:src": "npm run lint:src:ts && npm run lint:src:svelte",
+    "lint:src": "npm run lint:src:ts && npm run lint:src:svelte && npm run lint:src:html",
     "lint:src:ts": "npm run es -- src/**/*.ts",
     "lint:src:svelte": "npm run es -- src/**/*.svelte",
+    "lint:src:html": "npm run es -- src/**/*.html",
     "lint:ci": "npm run lint:ci:yml",
     "lint:ci:yml": "npm run es -- .github/workflows/*.yml",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -42,7 +43,7 @@
     "dev": "vite dev"
   },
   "devDependencies": {
-    "@jimbojet/lint": "~10.5.2",
+    "@jimbojet/lint": "~10.6.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.5.10",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
