--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "./svelte-kit/ambient.d.ts",
     "./svelte-kit/non-ambient.d.ts",
     "./svelte-kit/types/**/$types.d.ts",
-    "*.config.js",
-    "*.config.ts",
+    "vite.config.ts",
     "src/**/*.js",
     "src/**/*.ts",
     "src/**/*.svelte",
