--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
   "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "scripts": {
     "es": "eslint --fix --cache --cache-strategy content -c eslint.config.js",
-    "lint": "npm run lint:config && npm run lint:src && npm run lint:ci",
-    "lint:config": "npm run lint:config:json && npm run lint:config:js && npm run lint:config:ts",
-    "lint:config:json": "npm run es -- package.json tsconfig.json",
-    "lint:config:js": "npm run es -- *.config.js",
-    "lint:config:ts": "",
+    "lint": "npm run lint:cfg && npm run lint:src && npm run lint:ci",
+    "lint:cfg": "npm run lint:cfg:pkg && npm run lint:cfg:tsc && npm run lint:cfg:linter && npm run lint:cfg:svelte && npm run lint:cfg:vite",
+    "lint:cfg:pkg": "npm run es -- package.json",
+    "lint:cfg:tsc": "npm run es -- tsconfig.json",
+    "lint:cfg:linter": "npm run es -- eslint.config.js",
+    "lint:cfg:svelte": "npm run es -- svelte.config.js",
+    "lint:cfg:vite": "npm run es -- vite.config.ts",
     "lint:src": "npm run lint:src:ts && npm run lint:src:svelte && npm run lint:src:html",
     "lint:src:ts": "npm run es -- src/**/*.ts",
     "lint:src:svelte": "npm run es -- src/**/*.svelte",
     "lint:src:html": "npm run es -- src/**/*.html",
-    "lint:ci": "npm run lint:ci:yml",
-    "lint:ci:yml": "npm run es -- .github/workflows/*.yml",
+    "lint:ci": "npm run lint:ci:github",
+    "lint:ci:github": "npm run es -- .github/workflows/*.yml",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "npm run check -- --watch",
     "prebuild": "npm run check && npm run lint",
