--- a/.github/workflows/int.yellow-sand.yml
+++ b/.github/workflows/int.yellow-sand.yml
@@ -35,7 +35,7 @@ jobs:
         uses: Azure/static-web-apps-deploy@v1
         with:
           # https://aka.ms/swaworkflowconfig
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_YELLOW_SAND_079050310 }}
+          azure_static_web_apps_api_token: ${{ secrets.AZ_SWA_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: upload
           # ##### App Config ######
