--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@fontsource/oxygen": "^5.0.13"
   },
   "devDependencies": {
-    "@jimbojet/lint": "~11.5.1",
     "@sveltejs/adapter-static": "^3.0.2",
     "@sveltejs/kit": "^2.5.17",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "eslint": "~8.57.0",
+    "linted": "~12.0.0",
     "svelte-check": "^3.8.2",
     "tslib": "^2.6.3",
     "typescript": "^5.5.2",
