--- a/package.json
+++ b/package.json
@@ -7,20 +7,28 @@
     "sveltekit",
     "azure-static-web-apps"
   ],
+  "license": "MIT",
   "type": "module",
   "private": false,
-  "main": "",
+  "config": {
+    "PACKAGE_JSON_VERSION": "1.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jimmy-zhening-luo/jimmy.git"
   },
-  "author": "Jimmy Zhening Luo",
-  "license": "MIT",
+  "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
   "bugs": {
     "url": "https://github.com/jimmy-zhening-luo/jimmy/issues"
   },
-  "homepage": "https://github.com/jimmy-zhening-luo/jimmy#readme",
+  "author": {
+    "name": "Jimmy Zhening Luo",
+    "email": "1450044+jimmy-zhening-luo@users.noreply.github.com",
+    "url": "https://jimm.my",
+  },
   "peerDependencies": {},
+  "peerDependenciesMeta": {},
+  "optionalDependencies": {},
   "dependencies": {
     "@fontsource/open-sans": "^5.0.28",
     "@fontsource/overpass-mono": "^5.0.18",
