--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "type": "module",
   "private": false,
   "config": {
-    "PACKAGE_JSON_VERSION": "1.0.0"
+    "PACKAGE_JSON_VERSION": "1.0.1"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
   "author": {
     "name": "Jimmy Zhening Luo",
     "email": "1450044+jimmy-zhening-luo@users.noreply.github.com",
-    "url": "https://jimm.my",
+    "url": "https://jimm.my"
   },
   "peerDependencies": {},
   "peerDependenciesMeta": {},
