--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   ],
   "license": "MIT",
   "type": "module",
-  "private": false,
+  "private": true,
   "config": {
-    "PACKAGE_JSON_VERSION": "20.0.0"
+    "PACKAGE_JSON_VERSION": "20.1.0"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,8 @@
     "email": "1450044+jimmy-zhening-luo@users.noreply.github.com",
     "url": "https://jimm.my"
   },
+  "main": "",
+  "types": "",
   "peerDependencies": {},
   "peerDependenciesMeta": {},
   "optionalDependencies": {},
@@ -39,11 +41,17 @@
     "@sveltejs/kit": "^2.5.17",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "eslint": "~8.57.0",
-    "linted": "~13.0.3",
+    "linted": "~13.0.6",
     "svelte-check": "^3.8.2",
     "tslib": "^2.6.3",
     "typescript": "^5.5.2",
     "vite": "^5.3.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/src/"
+    ]
   },
   "scripts": {
     "e": "eslint -c eslint.config.js --cache --fix",
@@ -58,7 +66,9 @@
     "build": "vite build",
     "prepreview": "npm run build",
     "preview": "vite preview",
-    "test": "npm run preview",
+    "pretest": "npm run build",
+    "test": "(npm run test:jest) || (exit 0)",
+    "test:jest": "cross-env NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" NODE_NO_WARNINGS=1 jest --",
     "dev": "vite dev"
   }
 }
