--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "@sveltejs/adapter-static": "^3.0.2",
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "~8.57.0",
     "linted": "~14.1.1",
+    "postcss": "^8.4.39",
     "svelte-check": "^3.8.4",
+    "tailwindcss": "^3.4.4",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
     "vite": "^5.3.3"
