--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "include": [
-    "vite.config.ts",
+    "*.config.ts",
     "./svelte-kit/ambient.d.ts",
     "./svelte-kit/non-ambient.d.ts",
     "./svelte-kit/types/**/$types.d.ts",
