--- a/.github/workflows/int.yml
+++ b/.github/workflows/int.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm ci
       - name: Build SWA
         id: build
-        run: npm run action
+        run: npm run deploy
       - name: Deploy to Azure
         id: deploy
         uses: Azure/static-web-apps-deploy@v1
