nit(tsc): -unnecessary dotslash from svelte-kit includes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
   // from the referenced tsconfig.json - TypeScript does not merge them in
   "include": [
     "*.config.ts",
-    "./svelte-kit/ambient.d.ts",
-    "./svelte-kit/non-ambient.d.ts",
-    "./svelte-kit/types/**/$types.d.ts",
+    "svelte-kit/ambient.d.ts",
+    "svelte-kit/non-ambient.d.ts",
+    "svelte-kit/types/**/$types.d.ts",
     "src/**/*.js",
     "src/**/*.ts",
     "src/**/*.svelte",
